creacion de semantica

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Primeros Pasos</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>primeros pasos</h1>
+    </header>
     <main></main>
     <footer></footer>
 </body>
