explicacion de seleccion de contenido

--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/styles.css">
     <title>Primeros Pasos</title>
 </head>
+
 <body>
     <header>
         <h1>primeros pasos</h1>
     </header>
-    <main></main>
+    <main>
+        <h2>Introduccion</h2>
+        <p class="transformartextoenmayuscula
+            text-transform: uppercase;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis eaque fugiat dolore sunt officia, omnis
+            doloremque quis neque atque in consequuntur nemo adipisci ipsa inventore vero est incidunt corrupti
+            dignissimos!</p>
+        <p id="parrafo1" class="transformartextoenmayuscula
+            text-transform: uppercase;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto recusandae modi assumenda nisi
+            necessitatibus adipisci illo amet ratione, neque numquam pariatur tempora distinctio cumque? Veritatis rem
+            possimus deleniti delectus voluptatum!</p>
+        <p id="parrafo2" class="transformartextoenmayuscula
+            text-transform: uppercase;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere exercitationem tempora nesciunt iste
+            recusandae quibusdam deleniti aliquid, repellendus excepturi laboriosam? Nulla magnam libero minus!
+            Accusantium maiores possimus perspiciatis nemo delectus?</p>
+    </main>
     <footer></footer>
 </body>
+
 </html>
