--- a/src/pages/01_bordes.html
+++ b/src/pages/01_bordes.html
@@ -30,6 +30,45 @@
             <p class="hidden">Un borde oculto.</p>
             <p class="mix">Un borde mixto.</p>
         </section>
+        section>
+            <h2>La propiedad border-width</h2>
+            <article>
+                <p>Esta propiedad especifica el ancho de los cuatro bordes:</p>
+                <p class="one">Algo de texto.</p>
+                <p class="two">Algo de texto.</p>
+                <p class="three">Algo de texto.</p>
+                <p class="four">Algo de texto.</p>
+                <p class="five">Algo de texto.</p>
+                <p class="six">Algo de texto.</p>
+                <p><b>Nota:</b> La propiedad "border-width" no funciona si se utiliza sola.
+                    Siempre especifique primero la propiedad "border-style" para establecer los bordes.</p>
+            </article>
+            <article>
+                <h2>La propiedad border-width con tamaño especifico</h2>
+                <p>La propiedad border-width puede tener de uno a cuatro valores (para el borde superior, borde derecho,
+                    borde inferior y borde izquierdo):</p>
+                <p class="uno">Algo de texto.</p>
+                <p class="dos">Algo de texto.</p>
+                <p class="tres">Algo de texto.</p>
+            </article>
+        </section>
+        <section class="section">
+            <figure>
+                <img src="https://assets.goal.com/v3/assets/bltcc7a7ffd2fbf71f5/blt1bf651356d51b5d2/65fa9ebdc02dfa040a50b5a2/Cristiano_Ronaldo(2).jpg?auto=webp&format=pjpg&width=3840&quality=60" alt="" class="img1">
+            </figure>
+            <figure>
+                <img src="https://caracoltv.brightspotcdn.com/dims4/default/0e01695/2147483647/strip/true/crop/1600x1065+0+0/resize/1000x666!/quality/90/?url=http%3A%2F%2Fcaracol-brightspot.s3.amazonaws.com%2Fa9%2F83%2Fbcd1307c486ebd5d8decd3a972b3%2Fwhatsapp-image-2023-09-13-at-4.34.45%20PM.jpeg" alt="" class="img2">
+            </figure>
+            <figure>
+                <img src="https://caracoltv.brightspotcdn.com/dims4/default/0e01695/2147483647/strip/true/crop/1600x1065+0+0/resize/1000x666!/quality/90/?url=http%3A%2F%2Fcaracol-brightspot.s3.amazonaws.com%2Fa9%2F83%2Fbcd1307c486ebd5d8decd3a972b3%2Fwhatsapp-image-2023-09-13-at-4.34.45%20PM.jpeg" alt="" class="img3">
+            </figure>
+            <figure>
+                <img src="https://fotografias.lasexta.com/clipping/cmsimages02/2024/01/21/68352588-4B9B-4521-8AA6-61D65064048A/cristiano-ronaldo-nassr_98.jpg?crop=1200,675,x0,y0&width=1900&height=1069&optimize=low&format=webply" alt="" class="img4">
+            </figure>
+            <figure>
+                <img src="https://www.cristianoronaldo.com/assets/images/share.jpg?t=173174685" alt="" class="img5">
+            </figure>
+        </section>
     </main>
     <footer></footer>
 
